Fixed photos being too big

--- a/assets/css/default_post.css
+++ b/assets/css/default_post.css
@@ -9,3 +9,7 @@
 #return {
 	text-align: center;
 }
+
+img {
+	max-width: 100%;
+}
